--- a/src/app/components/header/navbar-primary/navbar-primary.component.scss
+++ b/src/app/components/header/navbar-primary/navbar-primary.component.scss
@@ -7,12 +7,15 @@ nav {
   padding: 20px 0;
   font-size: $font-size-h6 + 0.01em;
 
-  .payment-btn {
+  .signin-btn {
     border-radius: 15px;
     padding: 7px;
-    color: white;
     border: 1px solid;
     cursor: pointer;
+    >a{
+      text-decoration: none;
+      color: white;
+    }
   }
 
   .ths-icon, .language {
